# cph50-control

./: .gitignore  FLY_README.md  GITHUB_ACTIONS_SETUP.md  GOOGLE_HOME_SETUP.md  INTEGRATION.md  JEKYLL_MIGRATION_PLAN.md  JEKYLL_VERIFICATION.md  KNOWN_ISSUES.md  README.md  _config.yml  charge_github.py  check_status.py  classifier_tool.py  classify_vehicle.py  collect_session_data.py  cron.sh  debug_endpoint.py  eslint.config.cjs  extract_historical_sessions.py  fetch_session_details.py  fly_charger.py  history.html  index.html  monitor_sessions.py  monthly_activity.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_dal.py  test_dal_session.py  train_vehicle_classifier.py  tsconfig.json  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: charge-ev.yml  check-charger-status.yml  collect-session-data.yml  monitor-sessions.yml  nightly-charger-check.yml  (+2 more)
_includes/: nav.html
_layouts/: default.html  post.html
_posts/: 2026-01-09-ai-as-code-translator-and-debugger.html  2026-01-09-data-collection-for-vehicle-intelligence.html  2026-01-09-designing-with-ai-the-solution-space.html  2026-01-09-respecting-the-rate-plan.html  2026-01-09-standing-on-community-shoulders.html  2026-01-09-the-6am-problem.html  2026-01-09-two-paths-same-goal.html
blog/: index.html
chargepoint_dal/: README.md  __init__.py  dal.py  requirements.txt
classifier_tool/: __init__.py  cli.py  core.py  requirements.txt  utils.py
data/: classifier_summary.json  last_session.json  runs.json  session_vehicle_map.json  vehicle_config.json
docs/: CACHE_WORKFLOWS.md  DATA_DICTIONARY.md  SCHEMA.md  SECURITY_AUDIT.md  VEHICLE_IDENTIFICATION_PROJECT.md  dashboard.html  dashboard.js  how-i-dt-cph50.md  index.html  label-simple.html  label.html
images/: README.md
src/: index.ts
tools/: label.html
vehicle_classifier/: MENTAL_MODEL.md  README.md  __init__.py  classifier.py  classifier_trainer.py  pyproject.toml  session_label_manager.py  vehicle_manager.py
(+73 files in other folders)
