[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chargepoint-lib"
version = "0.1.0"
description = "Core libraries for ChargePoint automation: DAL, Classifier, and GUI."
requires-python = ">=3.8"
dependencies = [
    "python-chargepoint",
    "requests",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["."]  # scan the current directory for packages
include = ["chargepoint_dal*", "vehicle_classifier*", "gui*"]