[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-classifier"
version = "0.1.0"
description = "EV Vehicle Classification Library - Classify electric vehicles based on charging power curves"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stephen Cerruti", email = "scerruti@users.noreply.github.com"}
]
keywords = ["ev", "electric-vehicle", "classification", "charging", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/scerruti/cph50-control"
Repository = "https://github.com/scerruti/cph50-control"
Issues = "https://github.com/scerruti/cph50-control/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vehicle_classifier*"]
